# jupyter_tutorial

./: readme.md
01-python-mathlib/: number.py  population.py  pyproject.toml  readme.md  simple_sample.ipynb
