[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = ""
authors = ["Ong Woon Hock <woonhock@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.4.1"
jupyterlab = "^3.4.5"
pandas = "^1.4.3"
numpy = "^1.23.1"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
